--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -11,107 +11,8 @@
             <div id="content">
                 <div class="container-fluid">
                     <h1 class="h3 mb-4 text-gray-800" style="margin-top:30px;">Monthly Attendance Table</h1>
-                
-                    <!-- <div class="card shadow mb-4" style="font-size:12px;">
-                        <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
-                        </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Mon</th>
-                                            <th>Tue</th>
-                                            <th>Thu</th>
-                                            <th>Wed</th>
-                                            <th>Fri</th>
-                                            <th>Sun</th>
-                                            <th>Mon</th>
-                                            <th>Tue</th>
-                                            <th>Thu</th>
-                                            <th>Wed</th>
-                                            <th>Fri</th>
-                                            <th>Sun</th>
-                                            <th>Mon</th>
-                                            <th>Tue</th>
-                                            <th>Thu</th>
-                                            <th>Wed</th>
-                                            <th>Fri</th>
-                                            <th>Sun</th>
-                                            <th>Mon</th>
-                                            <th>Tue</th>
-                                            <th>Thu</th>
-                                            <th>Wed</th>
-                                            <th>Fri</th>
-                                            <th>Sun</th>
-                                            
-                                        </tr>
-                                    </thead>
-                                    
-                                    <tbody>
-                                        <tr>
-                                            <td>Tiger Nixon</td>
-                                            <td class="bg-success">Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            <td>Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            <td>Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            <td>Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            
-                                        </tr>
-                                        <tr>
-                                            <td>Garrett Winters</td>
-                                            <td>Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            <td>Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            <td>Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            <td>Mon</td>
-                                            <td>Tue</td>
-                                            <td>Thu</td>
-                                            <td>Wed</td>
-                                            <td>Fri</td>
-                                            <td>Sun</td>
-                                            
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div> -->
+
+                    
                     <div class="row">
                         <div class="col-lg-3 col-md-6 mb-4">
                             <div class="card border-left-primary shadow h-75 py-1">
@@ -165,132 +66,36 @@
                     <div class="card shadow mb-4">
                     <table class="table table-bordered table-sm table-hover align-middle table-responsive" style="text-align:center;">
                         <thead>
-                          <tr>
-                            <th class="align-middle" rowspan="2">Name</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thu</th>
-                            <th>Fri</th>
-                            <th>Sat</th>
-                            <th>Sun</th>
-                            <th>Mon</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thu</th>
-                            <th>Fri</th>
-                            <th>Sat</th>
-                            <th>Sun</th>
-                            <th>Mon</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thu</th>
-                            <th>Fri</th>
-                            <th>Sat</th>
-                            <th class="" colspan="4" style="text-align:center;">Total</th>
-                          </tr>
-                          <tr>
-                            <th>1</th>
-                            <th>2</th>
-                            <th>3</th>
-                            <th>4</th>
-                            <th>5</th>
-                            <th>6</th>
-                            <th>7</th>
-                            <th>8</th>
-                            <th>9</th>
-                            <th>1</th>
-                            <th>2</th>
-                            <th>1</th>
-                            <th>1</th>
-                            <th>1</th>
-                            <th>1</th>
-                            <th>1</th>
-                            <th>1</th>
-                            <th>1</th>
-                            <th>1</th>
-                            <th>P</th>
-                            <th>A</th>
-                            <th>C</th>
-                            <th>Denda</th>
-                          </tr>
+                            <tr>
+                                {% for column in result['data_monthly'].columns %}
+                                <th>{{ column }}</th>
+                                {% endfor %}
+                            </tr>
                         </thead>
                         <tbody style="padding-right: 0px;">
-                          <tr>
-                            <td style="text-align:left;">Nurahdiatna Subagya</td>
-                            <td class="bg-success text-light">A</td>
-                            <td class="bg-success text-light">A</td>
-                            <td class="bg-primary text-light">P</td>
-                            <td class="bg-info text-light">C</td>
-                            <td> </td>
-                            <td> </td>
-                            <td>A</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>C</td>
-                            <td></td>
-                            <td></td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td></td>
-                            <td>20</td>
-                            <td>3</td>
-                            <td>1</td>
-                            <td>Rp. 50.000,-</td>
-                          </tr>
-                          <tr>
-                            <td>Nurahdiatna Subagya</td>
-                            <td>A</td>
-                            <td>A</td>
-                            <td>P</td>
-                            <td>C</td>
-                            <td> </td>
-                            <td> </td>
-                            <td>A</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>C</td>
-                            <td></td>
-                            <td></td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td></td>
-                            <td>20</td>
-                            <td>3</td>
-                            <td>1</td>
-                          </tr>
-                          <tr>
-                            <td>Nurahdiatna Subagya</td>
-                            <td>A</td>
-                            <td>A</td>
-                            <td>P</td>
-                            <td>C</td>
-                            <td> </td>
-                            <td> </td>
-                            <td>A</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>C</td>
-                            <td></td>
-                            <td></td>   
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td>P</td>
-                            <td></td>
-                            <td>20</td>
-                            <td>3</td>
-                            <td>1</td>
-                          </tr>
+                          {% for ind,val in result['data_monthly'].iterrows() %}
+                            <tr>
+                                {% for vals in val.values %}
+                                {% if vals == 'P' %}
+                                <td class="bg-primary text-light">
+                                    {{ vals }}
+                                </td>
+                                {% elif vals == 'A' %}
+                                <td class="bg-success text-light">
+                                    {{ vals }}
+                                </td>
+                                {% elif vals == 'L' %}
+                                <td class="">
+                                    &nbsp;
+                                </td>
+                                {% else %}
+                                <td>
+                                    {{ vals }}
+                                </td>
+                                {% endif %}
+                                {% endfor %}
+                            </tr>
+                          {% endfor %}
                         </tbody>
                     </table>
                 </div>
