--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,10 @@
                                 <h6 class="m-0 font-weight-bold text-primary">Monthly Analysis</h6>
                             </div>
                             <div class="card-body">
+                                {% for i in range(12) %}
                                 <h4 class="small font-weight-bold">January <span
                                         class="float-right"></span></h4>
-                                <div class="progress mb-4">
+                                <div class="progress" style="margin-top:-5px; margin-bottom:8px;">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 45%"
                                         aria-label="presentseg" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">45</div>
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 30%"
@@ -65,9 +66,10 @@
                                         aria-label="leaveseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25</div>
                                     
                                 </div>
-                                <h4 class="small font-weight-bold">February <span
+                                {% endfor %}
+                                <!-- <h4 class="small font-weight-bold">February <span
                                     class="float-right"></span></h4>
-                                <div class="progress mb-4">
+                                <div class="progress mb-4" style="margin-top:-5px;">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 80%"
                                         aria-label="presentseg" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 15%"
@@ -185,7 +187,7 @@
                                     <div class="progress-bar bg-info" role="progressbar" style="width: 15%"
                                         aria-label="leaveseg" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
                                     
-                                </div>
+                                </div> -->
 
                                 <!-- <h4 class="small font-weight-bold">Sales Tracking <span
                                         class="float-right">40%</span></h4>
