--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -12,7 +12,19 @@
                 <div class="container-fluid">
                     <h1 class="h3 mb-4 text-gray-800" style="margin-top:30px;">Monthly Attendance Table</h1>
 
-                    
+                    <div class="dropdown mb-4">
+                        <button class="btn btn-primary dropdown-toggle" type="button"
+                            id="dropdownyears" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            2022
+                        </button>
+                        <div class="dropdown-menu animated--fade-in"
+                            aria-labelledby="dropdownyears">
+                            <a class="dropdown-item" href="#">2021</a>
+                            <a class="dropdown-item" href="#">2019</a>
+                            <!-- <a class="dropdown-item" href="#">Something else here</a> -->
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-lg-3 col-md-6 mb-4">
                             <div class="card border-left-primary shadow h-75 py-1">
