--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,15 @@
                         <button class="btn btn-primary dropdown-toggle" type="button"
                             id="dropdownparticipant" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
-                            Nurahdiatna Subagya
+                            {{ result['data_current_user'][1] }}
                         </button>
                         <div class="dropdown-menu animated--fade-in"
                             aria-labelledby="dropdownparticipant">
-                            <a class="dropdown-item" href="#">Muh. Agung Fazrulhaq</a>
-                            <a class="dropdown-item" href="#">Raisul Amin Zulfikri</a>
+                            {% for ind,val in result['data_participant'].iterrows() %}
+                            <a class="dropdown-item" href="/dashboard/{{ val['id'] }}">{{ val['name'] }}</a>
+                            <!-- <a class="dropdown-item" href="#">Raisul Amin Zulfikri</a> -->
                             <!-- <a class="dropdown-item" href="#">Something else here</a> -->
+                            {% endfor %}
                         </div>
                     </div>
 
@@ -54,165 +56,27 @@
                                 <h6 class="m-0 font-weight-bold text-primary">Monthly Analysis</h6>
                             </div>
                             <div class="card-body">
-                                {% for i in range(12) %}
-                                <h4 class="small font-weight-bold">January <span
+                                {% for i in range(1,13) %}
+                                    {% set data_monthly = result['data_yearly']['monthly'][i|string] %}
+                                <h4 class="small font-weight-bold">{{ result['months'][i-1] }} <span
                                         class="float-right"></span></h4>
                                 <div class="progress" style="margin-top:-5px; margin-bottom:8px;">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 45%"
-                                        aria-label="presentseg" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">45</div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 30%"
-                                        aria-label="absentseg" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30</div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 25%"
-                                        aria-label="leaveseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25</div>
+                                    <div class="progress-bar bg-primary" role="progressbar" style="width: {{ data_monthly['present_pct'] }}%"
+                                        aria-label="presentseg" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+                                        {{ data_monthly['total_present'] }} 
+                                    </div>
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: {{ data_monthly['absent_pct'] }}%"
+                                        aria-label="absentseg" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
+                                        {{ data_monthly['total_absent'] }}
+                                    </div>
+                                    <div class="progress-bar bg-secondary" role="progressbar" style="width: {{ data_monthly['nodata_pct'] }}%"
+                                        aria-label="leaveseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                        {{ data_monthly['nodata'] }}
+                                    </div>
                                     
                                 </div>
                                 {% endfor %}
-                                <!-- <h4 class="small font-weight-bold">February <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4" style="margin-top:-5px;">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 80%"
-                                        aria-label="presentseg" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 15%"
-                                        aria-label="absentseg" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 5%"
-                                        aria-label="leaveseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">March <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 90%"
-                                        aria-label="presentseg" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 5%"
-                                        aria-label="absentseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 5%"
-                                        aria-label="leaveseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">April <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 60%"
-                                        aria-label="presentseg" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%"
-                                        aria-label="absentseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 15%"
-                                        aria-label="leaveseg" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">May <span
-                                        class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 45%"
-                                        aria-label="presentseg" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 30%"
-                                        aria-label="absentseg" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 25%"
-                                        aria-label="leaveseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">June <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 80%"
-                                        aria-label="presentseg" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 15%"
-                                        aria-label="absentseg" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 5%"
-                                        aria-label="leaveseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">July <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 90%"
-                                        aria-label="presentseg" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 5%"
-                                        aria-label="absentseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 5%"
-                                        aria-label="leaveseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">August <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 60%"
-                                        aria-label="presentseg" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%"
-                                        aria-label="absentseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 15%"
-                                        aria-label="leaveseg" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">September <span
-                                        class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 45%"
-                                        aria-label="presentseg" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 30%"
-                                        aria-label="absentseg" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 25%"
-                                        aria-label="leaveseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">October <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 80%"
-                                        aria-label="presentseg" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 15%"
-                                        aria-label="absentseg" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 5%"
-                                        aria-label="leaveseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">November <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 90%"
-                                        aria-label="presentseg" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 5%"
-                                        aria-label="absentseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 5%"
-                                        aria-label="leaveseg" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div>
-                                <h4 class="small font-weight-bold">December <span
-                                    class="float-right"></span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 60%"
-                                        aria-label="presentseg" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%"
-                                        aria-label="absentseg" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 15%"
-                                        aria-label="leaveseg" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                    
-                                </div> -->
-
-                                <!-- <h4 class="small font-weight-bold">Sales Tracking <span
-                                        class="float-right">40%</span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%"
-                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">Customer Database <span
-                                        class="float-right">60%</span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar" role="progressbar" style="width: 60%"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">Payout Details <span
-                                        class="float-right">80%</span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
-                                        aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">Account Setup <span
-                                        class="float-right">Complete!</span></h4>
-                                <div class="progress">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
-                                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div> -->
+                                
                             </div>
                         </div>
                     </div>
@@ -302,5 +166,43 @@
 
     <!-- Page level custom scripts -->
     <script src="{{ url_for('static', filename='js/demo/chart-area-demo.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/demo/chart-pie-demo.js') }}"></script>
+    <script>
+        // Set new default font family and font color to mimic Bootstrap's default styling
+        Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+        Chart.defaults.global.defaultFontColor = '#858796';
+
+        // Pie Chart Example
+        var ctx = document.getElementById("myPieChart");
+        var myPieChart = new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+            labels: ["Present", "Absent", "No Data"],
+            datasets: [{
+            data: [{{ result['data_yearly']['yearly']['total_present'] }}, {{ result['data_yearly']['yearly']['total_absent'] }}, {{ result['data_yearly']['yearly']['total_nodata'] }} ],
+            backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc'],
+            hoverBackgroundColor: ['#2e59d9', '#17a673', '#2c9faf'],
+            hoverBorderColor: "rgba(234, 236, 244, 1)",
+            }],
+        },
+        options: {
+            maintainAspectRatio: false,
+            tooltips: {
+            backgroundColor: "rgb(255,255,255)",
+            bodyFontColor: "#858796",
+            borderColor: '#dddfeb',
+            borderWidth: 1,
+            xPadding: 15,
+            yPadding: 15,
+            displayColors: false,
+            caretPadding: 10,
+            },
+            legend: {
+            display: false
+            },
+            cutoutPercentage: 80,
+        },
+        });
+
+    </script>
+    <!-- <script src="{{ url_for('static', filename='js/demo/chart-pie-demo.js') }}"></script> -->
 </body>
