added leave data

--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -17,14 +17,38 @@
                             <h6 class="m-0 font-weight-bold text-primary">Import Data</h6>
                         </div>
                         <div class="card-body">
-                            <a href="#" class="btn btn-primary btn-icon-split btn-sm">
-                                <span class="icon text-white-50">
-                                    <i class="fas fa-flag"></i>
-                                </span>
-                                <span class="text">Import data (.xls)</span>
-                            </a>
-                            <p style="margin-top:15px;">Import data in the right format
+                            <form action="/importer", method="POST" enctype="multipart/form-data">
+                                <a href="" class="btn btn-primary btn-icon-split btn-sm" 
+                                    onclick="document.getElementById('importFile').click();">
+                                    <span class="icon text-white-50">
+                                        <i class="fas fa-upload"></i>
+                                    </span>
+                                    <span class="text" id="file-name">Import data (.xls)</span>
+                                </a>
+                                <input type="file" id="importFile" name="file" value="Import Data" style="display:none;">
+                                <input type="submit" class="btn btn-success btn-sm" value="Preview">
+                            </form>
+                            <p class="text mt-2">
+                                Import excel file
                             </p>
+                            <script>
+                                var input = document.getElementById( 'importFile' );
+                                var infoArea = document.getElementById( 'file-name' );
+
+                                input.addEventListener( 'change', showFileName );
+
+                                function showFileName( event ) {
+                                
+                                // the change event gives us the input it occurred in 
+                                var input = event.srcElement;
+                                
+                                // the input has an array of files in the `files` property, each one has a name that you can use. We're just using the name here.
+                                var fileName = input.files[0].name;
+                                
+                                // use fileName however fits your app best, i.e. add it into a div
+                                infoArea.textContent = fileName;
+                                }
+                            </script>
                         </div>
                     </div>
                     </div>
