--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -92,6 +92,10 @@
                                 <td class="bg-primary text-light">
                                     {{ vals }}
                                 </td>
+                                {% elif vals == 'C' %}
+                                <td class="bg-info text-light">
+                                    {{ vals }}
+                                </td>
                                 {% elif vals == 'A' %}
                                 <td class="bg-success text-light">
                                     {{ vals }}
