--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -64,7 +64,7 @@
                     {% endfor %}
                     {% else %}
                     {% for month in twelvemonth %}
-                            <a class="collapse-item" href="monthly/{{ month }}">{{ month }}</a>
+                            <a class="collapse-item" href="/monthly/{{ month }}">{{ month }}</a>
                     {% endfor %}
                     {% endif %}
                     </div>
@@ -72,13 +72,13 @@
             </li>
     <li class="nav-item">
         <a class="nav-link" href="participant.html">
-            <i class="fas fa-fw fa-table"></i>
+            <i class="fas fa-fw fa-user"></i>
             <span>Participants</span></a>
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="participant.html">
-            <i class="fas fa-fw fa-table"></i>
+        <a class="nav-link" href="/importdata">
+            <i class="fas fa-fw fa-upload"></i>
             <span>Data</span></a>
     </li>
     <!-- Divider -->
