--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -18,13 +18,13 @@
                         </div>
                         <div class="card-body">
                             <form action="/importer", method="POST" enctype="multipart/form-data">
-                                <a href="" class="btn btn-primary btn-icon-split btn-sm" 
+                                <span class="btn btn-primary btn-icon-split btn-sm" 
                                     onclick="document.getElementById('importFile').click();">
                                     <span class="icon text-white-50">
                                         <i class="fas fa-upload"></i>
                                     </span>
                                     <span class="text" id="file-name">Import data (.xls)</span>
-                                </a>
+                                </span>
                                 <input type="file" id="importFile" name="file" value="Import Data" style="display:none;">
                                 <input type="submit" class="btn btn-success btn-sm" value="Preview">
                             </form>
