--- a/templates/index.html
+++ b/templates/index.html
@@ -65,11 +65,11 @@
                                         aria-label="presentseg" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
                                         {{ data_monthly['total_present'] }} 
                                     </div>
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: {{ data_monthly['absent_pct'] }}%"
+                                    <div class="progress-bar bg-warning" role="progressbar" style="width: {{ data_monthly['absent_pct'] }}%"
                                         aria-label="absentseg" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                                         {{ data_monthly['total_absent'] }}
                                     </div>
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: {{ data_monthly['leave_pct'] }}%"
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: {{ data_monthly['leave_pct'] }}%"
                                         aria-label="absentseg" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                                         {{ data_monthly['total_leave'] }}
                                     </div>
@@ -117,10 +117,10 @@
                                         <i class="fas fa-circle text-primary"></i> Present
                                     </span>
                                     <span class="mr-2">
-                                        <i class="fas fa-circle text-success"></i> Absent
+                                        <i class="fas fa-circle text-warning"></i> Absent
                                     </span>
                                     <span class="mr-2">
-                                        <i class="fas fa-circle text-info"></i> Leave
+                                        <i class="fas fa-circle text-success"></i> Leave
                                     </span>
                                 </div>
                             </div>
@@ -183,8 +183,8 @@
             labels: ["Present", "Absent", "Leave"],
             datasets: [{
             data: [{{ result['data_yearly']['yearly']['total_present'] }}, {{ result['data_yearly']['yearly']['total_absent'] }}, {{ result['data_yearly']['yearly']['total_leave'] }} ],
-            backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc'],
-            hoverBackgroundColor: ['#2e59d9', '#17a673', '#2c9faf'],
+            backgroundColor: ['#4e73df','#f6c23e', '#1cc88a', '#36b9cc'],
+            hoverBackgroundColor: ['#2e59d9', '#c29727', '#17a673', '#2c9faf'],
             hoverBorderColor: "rgba(234, 236, 244, 1)",
             }],
         },
