--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -28,14 +28,14 @@
                     </div> -->
                     <form action="/tableinputdate" method="post">
                     <div class="row mb-4 ml-1">
-                        <input id="datepicker" name="startdate" width="276" placeholder="Start"/>
+                        <input id="datepicker" name="startdate" width="276" placeholder="Start" required/>
                             <script>
                                 $('#datepicker').datepicker({
                                     uiLibrary: 'bootstrap4'
                                 });
                             </script>
                             &nbsp;&nbsp;
-                        <input id="datepickerend" name="enddate" width="276" placeholder="End"/>
+                        <input id="datepickerend" name="enddate" width="276" placeholder="End" required/>
                             <script>
                                 $('#datepickerend').datepicker({
                                     uiLibrary: 'bootstrap4'
