--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -29,7 +29,7 @@
                                     </span>
                                     <span class="text" id="file-name">Import data (.xls)</span>
                                 </span>
-                                <input type="file" id="importFile" name="file" value="Import Data" style="display:none;">
+                                <input type="file" id="importFile" name="file" value="Import Data" style="display:none;" required>
                                 <input type="submit" class="btn btn-success btn-sm" value="Preview">
                             </form>
                             <p class="text mt-2">
