--- a/templates/importdata.html
+++ b/templates/importdata.html
@@ -3,6 +3,28 @@
 
 <head>
     {% include 'css-include.html' %}
+    <style>
+        .bg-primary{
+        background-color: #137a7f !important;
+        }
+        .bg-warning{
+            background-color: #D0C9C0 !important;
+        }
+        .bg-success{
+            background-color: #5F7161 !important;
+        }
+        .btn-primary{
+            background-color: #137a7f !important;
+            border-color: #137a7f !important;
+        }
+        .btn-success{
+            background-color: #5F7161 !important;
+            border-color: #5F7161 !important ;
+        }
+        .text-primary{
+            color:#137a7f !important;
+        }
+    </style>
 </head>
 <body id="page-top">
     <div id="wrapper">
