--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -71,7 +71,7 @@
                 </div>
             </li>
     <li class="nav-item">
-        <a class="nav-link" href="participant.html">
+        <a class="nav-link" href="/participants">
             <i class="fas fa-fw fa-user"></i>
             <span>Participants</span></a>
     </li>
