added export to excel button

--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -117,6 +117,10 @@
                     </div>
                     {% endif %}
                     <div class="card shadow mb-4">
+                        <div class="card-header">
+                            <a href="/download-monthly-data" class="btn btn-sm float-right text-light" style="width:120px;background-color:#137a7f;">save as .xls</a>
+                        </div>
+                    <div class="card-body">
                     <table class="table table-bordered table-sm table-hover align-middle table-responsive" style="text-align:center;font-size:10px;">
                         <thead>
                             <tr>
